--- a/style-header.css
+++ b/style-header.css
@@ -1,59 +1,28 @@
 /*header style*/
-html{
-    font-size: 12px;
+
+html, body{
     background-color: #f8f0f9;
 }
-body {
-    margin: 0;
-}
 
-*{
-    box-sizing: border-box;
-}
-
-.clearfix::after {
-    content:" ";
-    clear: both;
-    display: block;
-}
-
-.topbar {
-    height: 70px;
-    width: 100%;
+.page-header {
     background-color: white;
+    margin: 0 0 20px 0;
+    padding-top: 5px;
+    padding-bottom: 5px;
     position: fixed;
     top: 0;
-    z-index: 100;
+    left: 0;
+    right: 0;
+    z-index: 5;
 }
 
-.logo-container, .filter-container {
-    width: 25%;
-}
-
-.title-container {
-    width: 50%;
-}
-
-.filter-container, .title-container, .logo-container {
-    float: left;
-    position: relative;
-    height: 100%;
-}
-
-.home-button, .title, .filter {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-}
 .logo {
     border: 2px solid black;
-    border-radius: 50%;
-    width: 64px;
+    width: 70px;
 }
 
-.logo:hover, .fa-filter {
-    cursor: pointer;
+.logo:hover {
+    border: 4px solid #9e9e9e;
 }
 
 .fa-filter {
@@ -62,23 +31,65 @@ body {
 
 .title {
     font-family: 'Limelight', cursive;
-    font-size: 3.5rem;
+    font-size: 4.5rem;
 }
 
-@media only screen and (min-width : 480px) {
-    html {
-        font-size: 12px;
-    }
+.filter-container {
+    position: fixed;
+    top: 75px;
+    right: 0;
+    width: 300px;
+    z-index: 100;
+    background: #f9f9f9;
+    height: calc(100vh - 75px);
+    overflow: scroll;
 }
 
-@media only screen and (min-width : 839px) {
-    html {
-        font-size: 12.5px;
-    }
+.tree, .tree ul {
+    list-style: none;
+    margin: 0 0 0 1em;
+    padding: 0;
 }
 
-@media only screen and (min-width : 1114px) {
-    html {
-        font-size: 13px;
-    }
+.tree ul {
+    margin-left: 2em;
+    position: relative;
+}
+
+.tree ul:before {
+    content: "";
+    display: block;
+    width: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-left: 1px solid;
+    bottom: 10px;
+}
+
+.tree li {
+    margin: 0;
+    padding:0 1em;
+    line-height:1.75em;
+    font-size: 1.5rem;
+    font-weight:700;
+    position: relative;
+}
+
+.tree ul li:before {
+    content:"";
+    display:block;
+    width:10px;
+    height:0;
+    border-top:1px solid;
+    margin-top:-1px;
+    position:absolute;
+    top:1em;
+    left:0
+}
+
+.tree li:hover {
+    font-size: 1.75rem;
+    font-weight: 800;
+    cursor: pointer;
 }
