--- a/app/features/tiles/tiles.css
+++ b/app/features/tiles/tiles.css
@@ -30,3 +30,14 @@
     font-family: 'Merriweather' , serif;
     font-size: 1.5rem;
 }
+
+.tiles .panel-body {
+    max-height: 150px;
+    overflow: hidden;
+}
+
+.panel-heading .artTitle {
+    white-space: nowrap;
+    overflow: auto;
+    text-overflow: ellipsis;
+}
